--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-    <name>org.eclipse.wtp.incubator</name>
+    <name>incubating source editing incubator</name>
     <comment>
         simple project file for the rare case that this whole directory needs to be checked out (such as to create a new
         folder for a bundle)
