Fixed performance bug on tag content assist. Add assist/validation for namespaces.

--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
@@ -1,2 +1,4 @@
 plugin.facet.extension.name=Facelet
 plugin.facet.description=Facelet (XHTML) support
+Facelet_1_0_Project=Facelet 1.0 Project
+Facelet_1_0_PresetDesc=Configures a Dynamic Web application for Facelet 1.0, JSF v1.2 using Web Module v2.5 and Java v1.5.  
