--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.properties
@@ -1,3 +1,3 @@
-FaceletHTMLValidator.name=Facelet HTML Validator
+FaceletHTMLValidator_name=Facelet HTML Validator
 EL_Hyperlinkdetector_name=Facelet EL Hyperlink Detector
 FaceletValidatorMarker=Facelet Validator
