--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.xml
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.xml
@@ -43,7 +43,7 @@
    <extension
         point="org.eclipse.wst.validation.validator"
         id="FaceletHTMLValidator"
-        name="%FaceletHTMLValidator.name">
+        name="%FaceletHTMLValidator_name">
         <validator>
             <projectNature id="org.eclipse.wst.common.modulecore.ModuleCoreNature" />
             <projectNature id="org.eclipse.jdt.core.javanature" />
