--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,12 @@
-#Sat Feb 23 17:50:49 PST 2008
+#Mon Apr 07 18:34:53 PDT 2008
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
+org.eclipse.jdt.core.compiler.debug.localVariable=generate
+org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.problem.annotationSuperInterface=warning
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.autoboxing=ignore
