--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
@@ -2,3 +2,6 @@ plugin.facet.extension.name=Facelet
 plugin.facet.description=Facelet (XHTML) support
 Facelet_1_0_Project=Facelet 1.0 Project
 Facelet_1_0_PresetDesc=Configures a Dynamic Web application for Facelet 1.0, JSF v1.2 using Web Module v2.5 and Java v1.5.  
+
+Bundle-Name.0 = JSF Facelets Core Plugin
+tagRegistry.description.0 = Facelet Tag Registry
