--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/.settings/org.eclipse.pde.prefs
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/.settings/org.eclipse.pde.prefs
@@ -1,12 +1,15 @@
-#Mon Apr 07 18:34:42 PDT 2008
+#Fri May 30 12:03:18 PDT 2008
+compilers.f.unresolved-features=1
+compilers.f.unresolved-plugins=1
 compilers.incompatible-environment=1
 compilers.p.build=1
 compilers.p.deprecated=1
 compilers.p.discouraged-class=2
+compilers.p.internal=1
 compilers.p.missing-bundle-classpath-entries=1
-compilers.p.missing-packages=2
+compilers.p.missing-packages=0
 compilers.p.no-required-att=0
-compilers.p.not-externalized-att=2
+compilers.p.not-externalized-att=0
 compilers.p.unknown-attribute=1
 compilers.p.unknown-class=1
 compilers.p.unknown-element=1
@@ -14,5 +17,8 @@ compilers.p.unknown-identifier=1
 compilers.p.unknown-resource=1
 compilers.p.unresolved-ex-points=0
 compilers.p.unresolved-import=0
+compilers.s.create-docs=false
+compilers.s.doc-folder=doc
+compilers.s.open-tags=1
 compilers.use-project=true
 eclipse.preferences.version=1
