Change to strategy based resolver for finding external tag meta-data. Removed .cvsignore flag on the facelet taglib dtd.

--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
@@ -5,3 +5,26 @@ Facelet_1_0_PresetDesc=Configures a Dynamic Web application for Facelet 1.0, JSF
 
 Bundle-Name.0 = JSF Facelets Core Plugin
 tagRegistry.description.0 = Facelet Tag Registry
+pluginName = AdditionalTagMetadata Model
+providerName = www.example.org
+_UI_CreateChild_text = {0}
+_UI_CreateChild_text2 = {1} {0}
+_UI_CreateChild_text3 = {1}
+_UI_CreateChild_tooltip = Create New {0} Under {1} Feature
+_UI_CreateChild_description = Create a new child of type {0} for the {1} feature of the selected {2}.
+_UI_CreateSibling_description = Create a new sibling of type {0} for the selected {2}, under the {1} feature of their parent.
+_UI_PropertyDescriptor_description = The {0} of the {1}
+_UI_ElementData_type = Element Data
+_UI_AttributeData_type = Attribute Data
+_UI_Unknown_type = Object
+_UI_Unknown_datatype= Value
+_UI_ElementData_name_feature = Name
+_UI_ElementData_attributes_feature = Attributes
+_UI_AttributeData_name_feature = Name
+_UI_AttributeData_usage_feature = Usage
+_UI_Unknown_feature = Unspecified
+_UI_AttributeUsage_OPTIONAL_literal = OPTIONAL
+_UI_AttributeUsage_REQUIRED_literal = REQUIRED
+_UI_AttributeUsage_FIXED_literal = FIXED
+_UI_AttributeUsage_PROHIBITED_literal = PROHIBITED
+_UI_AttributeData_description_feature = Description
