The beginnings of content assist for ui:component template attribute.

--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.xml
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.xml
@@ -107,4 +107,12 @@
                 webURL="facelet-taglib_1_0.dtd" />
        </catalogContribution>
     </extension>
+    
+       <extension
+         point="org.eclipse.jst.jsf.core.AttributeValueRuntimeTypes">
+
+      <attributeValueRuntimeType
+            class="org.eclipse.jst.jsf.facelet.core.internal.cm.attributevalues.TemplateWebPathType"
+            id="attributevalues.TemplateWebPathType"/>
+    </extension>
 </plugin>
