--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
@@ -4,4 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                jars/,\
-               plugin.properties
+               plugin.properties,\
+               dtd/,\
+               icons/,\
+               model/
