Update feature name

--- a/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet.feature/feature.properties
+++ b/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet.feature/feature.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 feature.name=JSF Facelets Tools Incubator
 feature.provider=Eclipse.org
-feature.description=WTP Facelet Tooling Incubator
+feature.description=WTP JSF Facelets Tooling Incubator
 
 # "copyright" property - text of the "Feature Update Copyright"
 feature.copyright=\
