--- a/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet_sdk.feature/feature.properties
+++ b/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet_sdk.feature/feature.properties
@@ -8,9 +8,9 @@
 # Contributors:
 #     Oracle Corporation - initial API and implementation
 ###############################################################################
-feature.name=JavaServer Faces Tooling (SDK)
+feature.name=JSF Facelets Tools Incubator (SDK)
 feature.provider=Eclipse.org
-feature.description=WTP JavaServer Faces Tooling SDK
+feature.description=WTP JSF Facelets Tooling Incubator SDK
 
 # "featureName" property - name of the feature
 
