--- a/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet.feature/feature.properties
+++ b/org.eclipse.jsf/features/org.eclipse.jst.jsf.facelet.feature/feature.properties
@@ -8,9 +8,9 @@
 # Contributors:
 #    Cameron Bateman - initial API and implementation
 ###############################################################################
-feature.name=JSF Facelets Tools Incubator
-feature.provider=Eclipse.org
-feature.description=WTP JSF Facelets Tooling Incubator
+featureName=JSF Facelets Tools Incubator
+featureProvider=Eclipse.org
+featureDescription=WTP JSF Facelets Tooling Incubator
 
 # "copyright" property - text of the "Feature Update Copyright"
 feature.copyright=\
