--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/plugin.properties
@@ -3,10 +3,10 @@ plugin.facet.description=Facelet (XHTML) support
 Facelet_1_0_Project=Facelet 1.0 Project
 Facelet_1_0_PresetDesc=Configures a Dynamic Web application for Facelet 1.0, JSF v1.2 using Web Module v2.5 and Java v1.5.  
 
-Bundle-Name.0 = JSF Facelets Core Plugin
+Bundle-Name.0 = JSF Facelets Tools - WTP Incubator Project
 tagRegistry.description.0 = Facelet Tag Registry
 pluginName = AdditionalTagMetadata Model
-providerName = www.example.org
+providerName = Eclipse.org
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
 _UI_CreateChild_text3 = {1}
