--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/plugin.properties
@@ -1,4 +1,5 @@
 FaceletHTMLValidator_name=Facelet HTML Validator
 EL_Hyperlinkdetector_name=Facelet EL Hyperlink Detector
 FaceletValidatorMarker=Facelet Validator
-Bundle-Name.0 = Ui Plug-in
+Bundle-Name.0 = UI Plug-in
+Bundle-Vendor.0 = Eclipse.org
