--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
@@ -7,4 +7,8 @@ bin.includes = META-INF/,\
                plugin.properties,\
                dtd/,\
                icons/,\
-               model/
+               model/,\
+               about.ini,\
+               about.properties,\
+               eclipse_update_120.jpg,\
+               about.html
