--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.tagsupport/build.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.tagsupport/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                metadata/,\
-               plugin.xml
+               plugin.xml,\
+               plugin.properties
