User doc + branding

--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.core/build.properties
@@ -11,4 +11,5 @@ bin.includes = META-INF/,\
                about.ini,\
                about.properties,\
                eclipse_update_120.jpg,\
-               about.html
+               about.html,\
+               eclipse32.png
