--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.classpath
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/flute.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sac.jar"/>
+	<classpathentry kind="lib" path="lib/dtdparser120.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
