--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -1,19 +1,13 @@
 bin.includes = plugin.xml,\
-               vex-toolkit.jar,\
-               lgpl.txt,\
                plugin.properties,\
                META-INF/,\
                .,\
                lib/,\
                lib/dtdparser120.jar,\
                lib/flute.jar,\
-               lib/sac.jar,\
                bin/
 output.vex-toolkit.jar = bin/
 source.vex-toolkit.jar = src/
-src.includes = lgpl.txt,\
-               lib/,\
+src.includes = lib/,\
                src/
-jars.compile.order = vex-toolkit.jar,\
-                     .
 source.. = src/
