--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.xml
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.xml
@@ -122,7 +122,7 @@
 
       </actionSet>
    </extension>
-  <!--
+ 
    <extension
          point="org.eclipse.ui.editors">
       <editor
@@ -134,13 +134,12 @@
             id="org.eclipse.wst.xml.vex.ui.VexEditor">
       </editor>
    </extension>
-   -->
-   
+<!--
    	<extension point="org.eclipse.ui.editors">
 		<editor
 			name="%VexEditor.name"
 			icon="$nl$/vex16.gif"
-			contributorClass="org.eclipse.wst.xml.vex.ui.internal.action.VexActionBarContributor"
+			contributorClass="org.eclipse.wst.xml.vex.ui.internal.editor.VexActionBarContributor"
 			class="org.eclipse.wst.xml.vex.ui.internal.editor.VEXMultiPageEditorPart"
 			symbolicFontName="org.eclipse.wst.sse.ui.textfont"
 			id="org.eclipse.wst.xml.vex.ui.VexEditor">
@@ -151,7 +150,7 @@
 
 		</editor>
 	</extension>
-   
+ -->  
    
    <extension
          point="org.eclipse.ui.newWizards">
