bug 250830 - Fix SDK issues and other build problems

--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
@@ -3,4 +3,5 @@ bin.includes = plugin.xml,\
                toc.xml,\
                tocconcepts.xml,\
                toctasks.xml,\
-               META-INF/
+               META-INF/,\
+               plugin.properties
