--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -1,13 +1,12 @@
-bin.includes = plugin.xml,\
-               plugin.properties,\
+bin.includes = plugin.properties,\
                META-INF/,\
                .,\
                lib/,\
-               lib/dtdparser120.jar,\
                lib/flute.jar,\
                bin/
-output.vex-toolkit.jar = bin/
-source.vex-toolkit.jar = src/
 src.includes = lib/,\
                src/
 source.. = src/
+jars.compile.order = .
+bin.excludes = lib/.cvsignore
+src.excludes = lib/.cvsignore
