bug 250830 - Fix SDK issues and other build problems

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.properties
@@ -1,6 +1,6 @@
-plugin.name = Vex DocBook Plug-in (Incubating)
+plugin.name = VEX DocBook Plug-in (Incubating)
+providerName = Eclipse.org
 
 doctype.docbook4_5=DocBook v4.5
-doctype.sdocbook1_1=Simplified DocBook v1.1
 
 style.docbook-plain=DocBook Plain
