re-arrange so xsl and vex can have seperatly triggered builds

--- a/sourceediting/features/org.eclipse.wst.xml.vex_sdk.feature/build.properties
+++ b/sourceediting/features/org.eclipse.wst.xml.vex_sdk.feature/build.properties
@@ -4,4 +4,4 @@ bin.includes = feature.xml,\
                eclipse_update_120.jpg,\
                feature.properties
 
-generate.feature@org.eclipse.wst.vex.feature.source=org.eclipse.wst.vex.feature
+generate.feature@org.eclipse.wst.xml.vex.feature.source=org.eclipse.wst.xml.vex.feature
