--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.settings/org.eclipse.core.resources.prefs
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Oct 27 14:42:59 GMT 2008
+#Sun Nov 02 01:26:33 GMT 2008
 eclipse.preferences.version=1
-encoding//emf/dom.ecorediag=UTF-8
+encoding//emf/dom1.ecorediag=UTF-8
