--- a/sourceediting/tests/org.eclipse.wst.xml.vex.tests/.settings/org.eclipse.jdt.core.prefs
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.tests/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,7 @@
-#Thu Jan 10 09:20:54 EST 2008
+#Mon Nov 03 20:29:03 EST 2008
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
-org.eclipse.jdt.core.compiler.compliance=1.4
-org.eclipse.jdt.core.compiler.problem.assertIdentifier=warning
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=warning
-org.eclipse.jdt.core.compiler.source=1.3
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.compliance=1.5
