--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
@@ -5,3 +5,4 @@ bin.includes = plugin.xml,\
                toctasks.xml,\
                META-INF/,\
                plugin.properties
+generateSourceBundle=false
