--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -1,12 +1,11 @@
-bin.includes = plugin.properties,\
+# <copyright>
+# </copyright>
+#
+# $Id: build.properties,v 1.4 2008/11/05 21:08:03 dacarver Exp $
+
+bin.includes = .,\
                META-INF/,\
-               .,\
-               lib/,\
-               lib/flute.jar,\
-               bin/
-src.includes = lib/,\
-               src/
-source.. = src/
+               plugin.properties
 jars.compile.order = .
-bin.excludes = lib/.cvsignore
-src.excludes = lib/.cvsignore
+output.. = bin/
+source.. = src/
