backout of changes

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -1,11 +1,12 @@
-# <copyright>
-# </copyright>
-#
-# $Id: build.properties,v 1.4 2008/11/05 21:08:03 dacarver Exp $
-
-bin.includes = .,\
+bin.includes = plugin.properties,\
                META-INF/,\
-               plugin.properties
-jars.compile.order = .
-output.. = bin/
+               .,\
+               lib/,\
+               lib/flute.jar,\
+               bin/
+src.includes = lib/,\
+               src/
 source.. = src/
+jars.compile.order = .
+bin.excludes = lib/.cvsignore
+src.excludes = lib/.cvsignore
