updated bundle information

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
@@ -8,5 +8,5 @@
 # Contributors:
 #     Dominik Schadow - initial API and implementation
 ###############################################################################
-pluginName=XML Security Tools Doc (Incubating)
-providerName=Eclipse.org
+bundleName=XML Security Tools Doc (Incubating)
+bundleProvider=Eclipse.org
