bug 250829 - initial load of VEX emf model and generated code.

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -3,10 +3,14 @@ bin.includes = plugin.properties,\
                .,\
                lib/,\
                lib/flute.jar,\
-               bin/
+               bin/,\
+               plugin.xml
 src.includes = lib/,\
+               src-emf/,\
                src/
-source.. = src/
-jars.compile.order = .
+source.. = src/,\
+           src-emf/
+der = .
 bin.excludes = lib/.cvsignore
 src.excludes = lib/.cvsignore
+output.. = bin/
