--- a/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/build.properties
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/build.properties
@@ -1,6 +1,8 @@
-source.. = src/
+source.. = src/,\
+           src_emf/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                projectFiles/,\
-               bin/
+               bin/,\
+               plugin.properties
