Cleaned up help, removed basic parts

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
@@ -9,16 +9,9 @@
 #     Dominik Schadow - initial API and implementation
 ###############################################################################
 bin.includes = META-INF/,\
-               basics/,\
-               images/,\
                plugin/,\
                *.css,\
                *.xml,\
-               book.html,\
-               glossary.html,\
-               literature.html,\
-               overview.html,\
-               resources.html,\
+               *.html,\
                plugin.properties,\
-               about.html,\
-               notices.html
+               images/
