updated and cleaned up documentation

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
@@ -9,9 +9,10 @@
 #     Dominik Schadow - initial API and implementation
 ###############################################################################
 bin.includes = META-INF/,\
-               plugin/,\
+               setup/,\
                *.css,\
                *.xml,\
                *.html,\
                plugin.properties,\
-               images/
+               images/,\
+               tasks/
