fix NPE error on builder, as well as add DOM synchronization tests

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -20,6 +20,7 @@ PluginProjectNature.name=Vex Plugin Project Nature
 StylePropertyPage.name=Vex Style
 VexCommandCategory.name=Vex XML Editor
 VexEditor.name=Vex XML Editor
+VexEditor.multipage.name=VEX Multipage XML Editor
 VexEditorContext.name=Editing XML Documents
 VexViewCategory.name=Vex
 
