--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.xml
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.xml
@@ -134,24 +134,23 @@
             id="org.eclipse.wst.xml.vex.ui.VexEditor">
       </editor>
    </extension>
-<!--
+
    	<extension point="org.eclipse.ui.editors">
 		<editor
-			name="%VexEditor.name"
+			name="%VexEditor.multipage.name"
 			icon="$nl$/vex16.gif"
 			contributorClass="org.eclipse.wst.xml.vex.ui.internal.editor.VexActionBarContributor"
 			class="org.eclipse.wst.xml.vex.ui.internal.editor.VEXMultiPageEditorPart"
 			symbolicFontName="org.eclipse.wst.sse.ui.textfont"
-			id="org.eclipse.wst.xml.vex.ui.VexEditor">
+			id="org.eclipse.wst.xml.vex.ui.VexEditorMultiPage">
 			<contentTypeBinding
 				contentTypeId="org.eclipse.core.runtime.xml" />
-			<contentTypeBinding
+<!--			<contentTypeBinding
 				contentTypeId="org.eclipse.wst.xml.core.xmlsource" />
-
+-->				
 		</editor>
 	</extension>
- -->  
-   
+    
    <extension
          point="org.eclipse.ui.newWizards">
       <category
