--- a/sourceediting/features/org.eclipse.wst.xml.security_sdk.feature/build.properties
+++ b/sourceediting/features/org.eclipse.wst.xml.security_sdk.feature/build.properties
@@ -3,3 +3,6 @@ bin.includes = feature.xml,\
                epl-v10.html,\
                feature.properties,\
                license.html
+               
+generate.feature@org.eclipse.wst.xml.security.feature.source=org.eclipse.wst.xml.security.feature
+               
